2005-11-15  Vincent Noel  <vincent.noel@gmail.com>

	* about.c (logview_about): Add documenters in the about
	dialog. Update email address.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c (prefs_create_defaults): Add a few more default logs.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Don't allow row collapsing
	for logs without days.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (string_get_date_string): Allow parsing logs with
	dates in the yyyy-mm-dd format (e.g. dpkg.log).

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_init): Put the filter bar above the version bar.

2005-11-14  Vincent Noel <vnoel@cox.net>

	* logrtns.c (log_open): Catch errors better.

	* logview.c: Add mnemonics in menus.

	* logview-findbar.c (logview_findbar_clear): Hide the filter bar
	when clearing the filter.

	* calendar.c: (calendar_mark_dates), (calendar_init_data),
	(calendar_day_selected), (calendar_select_date), (calendar_init),
	(calendar_class_finalize), (calendar_class_init):
	* calendar.h: Privatize the calendar stuff.

2005-11-14  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (logview_update_version_bar):
	* logview.c: (logview_select_log), (logview_add_logs_from_names):
	* userprefs.c: (prefs_load), (prefs_save): Correctly save the
	state even with no opened log.

2005-11-08  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_menus_set_state), (logview_add_log),
	(logview_toggle_monitor), (logview_select_all),
	(logview_menu_item_toggle_set_active): Fix toggle menu item
	inconsistency.

2005-11-08  Vincent Noel  <vnoel@cox.net>

	* loglist.c: (loglist_init):
	* logrtns.c: (log_open): Cleanup after myself.

2005-11-08  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (logview_create_model):
	* loglist.c: (loglist_add_log):
	* logrtns.c: (log_read_dates), (log_open):
	* logview-findbar.c: (iter_is_visible), (logview_findbar_clear),
	(logview_findbar_entry_timeout),